# libquickmail

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  doxygen_dev.cfg  libquickmail.workspace  libquickmail_shared.cbp  libquickmail_static.cbp  ltmain.sh  make_release.sh  quickmail.c  quickmail.h  quickmail_shared.cbp  quickmail_static.cbp  quickmail_static_nolib.cbp  quickmailprog.c  smtpsocket.c  smtpsocket.h  test.cbp  test_libquickmail_shared.cbp  test_libquickmail_static.cbp  test_nocurl.cbp  test_quickmail.c
.github/workflows/: libquickmail-ci.yml  libquickmail.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
m4/: libtool.m4
man1/: quickmail.1
